--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <nav>
                     <ul class="nav navbar-nav">
                         <li><a href="#top">Home</a></li>
-                        <li><a href="#featured">Featured</a></li>
-                        <li><a href="#projects">Recent Projects</a></li>
-                        <li><a href="#video">Presentation</a></li>
+                        <li><a href="#featured">Personal/Research Projects</a></li>
+                        <li><a href="#projects">Achievements</a></li>
+                        <!-- <li><a href="#video">Presentation</a></li> -->
                         <li><a href="#blog">Work Experience</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
                     </ul>
                 </nav>
             </div>
@@ -92,7 +92,7 @@
                         <a href="#contact">
                             <span class="rect"></span>
                             <span class="circle"></span>
-                            Contact Us
+                            Contact Me
                         </a>
                     </li>
                 </ul>
