Modified the sentence

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                                     <span>Pune, India - Hybrid</span>
                                                     <ul style="font-size: larger; list-style-type: disc; margin: 0; padding: 0;">
                                                         <li style="margin-bottom: 10px; line-height: 1.5; text-decoration: none !important;">
-                                                            Primary asset in developing an AI-assisted product support solution using Generative AI and Retrieval-Augmented Generation (RAG) techniques, enhancing internal processes and productivity while dynamically automating data updates. Now in production, this solution has significantly reduced the workload of two teams through the use of Generative AI.
+                                                            Developed an AI-assisted product support solution using Generative AI and Retrieval-Augmented Generation (RAG) techniques, enhancing internal processes and productivity while dynamically automating data updates. Now in production, this solution has significantly reduced the workload of two teams through the use of Generative AI.
                                                         </li>
                                                         <li style="margin-bottom: 10px; line-height: 1.5; text-decoration: none !important;">
                                                             Delivered a Data Engineering Proof of Concept (PoC) that transformed real-time data into two augmented layers using delta tables and Databricks, enabling microservices to effectively extract data and successfully addressing challenges with large datasets; this PoC has been transitioned to production use. 
